--- a/Cloudents.Web/ClientApp/components/question/helpers/new-question-card/new-question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/new-question-card/new-question-card.less
@@ -92,6 +92,7 @@
         right: 10px;
         @media (max-width: @screen-xs) {
           margin-top: -10px;
+          right: 16px;
         }
         i {
           font-size: 16px;
